# Herd-Immunity-Simulator

./: .gitignore  HerdImmunitySimulator.py  README.md
CPP/: .gitignore  CMakeLists.txt  build_win32.sh  get_tclap.sh  main.cpp
CPP/lib/: clone_cpp_argparse.sh
CPP/src/: InfectableNode.cpp  InfectableNode.h  InfectablePopulation.cpp  InfectablePopulation.h  RandomGenerators.cpp  RandomGenerators.h  RangeConstraint.h  main.cpp
Python/: HerdImmunitySimulator.py
